# bwfs

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  TODO.md  example-filepicker.sh  example-prompt.sh  flake.nix
src/: client.rs  lib.rs  main.rs  mapfs.rs  message.rs  server.rs
src/server/: bwclient.rs  mapfs.rs
