[package]
name = "bwfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
fuser = "0.14.0"
libc = "0.2.153"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
